--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
 dirs = "5.0.1"
+regex = "1.11.1"
 reqwest = { version = "0.11.22", features = ["blocking"] }
 
 [[advent_of_code]]
