--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
 dirs = "5.0.1"
+html2md = "0.2.14"
 regex = "1.11.1"
 reqwest = { version = "0.11.22", features = ["blocking"] }
+scraper = "0.22.0"
 
 [[advent_of_code]]
 name = "advent_of_code"
